introduced competitor registration form object

--- a/app/views/events/competitors/_form_controls.js.erb
+++ b/app/views/events/competitors/_form_controls.js.erb
@@ -1,8 +1,8 @@
-Skyderby.helpers.ProfileSelect($('select[name="competitor[profile_id]"]'));
-Skyderby.helpers.SuitSelect($('select[name="competitor[suit_id]"]'));
-Skyderby.helpers.CountrySelect($('select[name="competitor[profile_attributes][country_id]"]'));
+Skyderby.helpers.ProfileSelect($('select[name="profile_id"]'));
+Skyderby.helpers.SuitSelect($('select[name="suit_id"]'));
+Skyderby.helpers.CountrySelect($('select[name="country_id"]'));
 
-$('select[name="competitor[section_id]"]').select2({
+$('select[name="section_id"]').select2({
   theme: 'bootstrap',
   width: '100%',
   minimumResultsForSearch: 10
