--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,7 @@
 @import './events/**/*';
 @import './suits/**/*';
 @import './tracks/**/*';
+@import './profiles/**/*';
 @import './tournaments/**/*';
 @import './online_competitions/**/*';
 
