implemented online ranking and tracks in profile

--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -6,30 +6,6 @@
   = render 'profiles/header', profile: @profile
 
   .content-block
-    .card-actions.text-right
-
-      - if policy(@profile).edit?
-        = link_to edit_profile_path(@profile), class: 'btn-flat' do
-          %i.fa.fa-pencil
-          = t('general.edit')
-
-        - if policy(@profile).destroy?
-          = link_to t('general.delete'),
-                    @profile,
-                    method: :delete,
-                    remote: true,
-                    data: { confirm: 'Are you sure you want to delete this profile?' },
-                    class: 'btn-flat text-danger'
-
-        - if @profile.belongs_to_user? && policy(@profile).masquerade?
-          = link_to new_user_masquerades_path(@profile.owner), class: 'btn-flat' do
-            %i.fa.fa-magic
-            Masquerade
-
-        - if policy(@profile).merge?
-          = link_to new_profile_merge_path(@profile), remote: true, class: 'btn-flat' do
-            Merge
-
     .profile-achievements
       .profile-section-header
         Достижения
@@ -41,17 +17,23 @@
         - @profile.badges.each do |badge|
           = render 'profiles/badges/badge', badge: badge
 
-    .profile-rankings
+    .profile-section
       .profile-section-header
         Онлайн соревнования
-    - unless @profile.personal_top_scores.blank?
-      %hr
-      .row
-        .col-sm-12
-          - @profile.personal_top_scores.each do |top_score|
-            .col-sm-3
-              %strong
-                = "##{top_score.rank}"
-              in
-              = top_score.virtual_competition.name
-    
+      .profile-rankings
+        - @profile.ranking_positions.each do |competition, scores|
+          .profile-rankings__competition{'data-category': competition.suits_kind, 'data-activity': competition.jumps_kind}
+            .profile-rankings__competition-name
+              = link_to competition.name, competition
+            %ul.profile-rankings__list
+              - scores.each do |score|
+                %li{class: ('profile-rankings--self' if score.profile_id == @profile.id)}
+                  %span.profile-rankings__list-rank
+                    = "##{score.rank}"
+                  %span.profile-rankings__list-name
+                    = score.profile.name
+                  %span.profile-rankings__list-delimiter
+                    \//
+                  %span.profile-rankings__list-result
+                    = format_result(score.result, competition)
+                    = competition_unit(competition)
