--- a/app/views/profiles/_header.html.haml
+++ b/app/views/profiles/_header.html.haml
@@ -27,10 +27,31 @@
         = link_to profile_tracks_path(profile) do
           Треки
 
-      %li.tabs-navbar__menuitem{class: ('tabs-navbar--active' if controller_path == 'profiles/videos')}
-        = link_to profile do
-          Видео
-
       %li.tabs-navbar__menuitem{class: ('tabs-navbar--active' if controller_path == 'profiles/flight_profiles')}
         = link_to profile_flight_profiles_path(profile) do
           Профили полетов
+  .profile-commands
+    - if policy(@profile).edit?
+      = link_to edit_profile_path(@profile), class: 'btn-flat' do
+        %i.fa.fa-pencil
+        = t('general.edit')
+
+    - if policy(@profile).destroy?
+      = link_to t('general.delete'),
+                @profile,
+                method: :delete,
+                remote: true,
+                data: { confirm: 'Are you sure you want to delete this profile?' },
+                class: 'btn-flat text-danger'
+
+    - if @profile.belongs_to_user? && policy(@profile).masquerade?
+      = link_to new_user_masquerades_path(@profile.owner), class: 'btn-flat' do
+        %i.fa.fa-magic
+        Masquerade
+
+    - if policy(@profile).merge?
+      = link_to new_profile_merge_path(@profile), remote: true, class: 'btn-flat' do
+        Merge
+
+
+
