--- a/app/views/profiles/tracks/index.html.haml
+++ b/app/views/profiles/tracks/index.html.haml
@@ -15,8 +15,7 @@
           %th.text-right= t('activerecord.attributes.track.recorded_at')
           %th
       %tbody
-        - groups = @profile.tracks.group_by { |x| x.created_at.beginning_of_month }
-        - groups.each do |group, tracks|
+        - @profile.tracks_by_month.each do |group, tracks|
           %tr.bg-warning.text-danger.no-hover
             %td{colspan: 9}
               = l(group,
@@ -32,6 +31,8 @@
                   - else 
                     = track.missing_suit_name
               %td.text-info= track_place(track)
+              %td.text-muted
+                .comment-cell= track.comment
               %td.text-right
                 %span.text-info{data: {toggle: 'tooltip'}, title: range_title(track.distance)}
                   = track.distance.result.to_i if track.distance
@@ -41,10 +42,11 @@
               %td.text-right
                 %span.text-info{data: {toggle: 'tooltip'}, title: range_title(track.time)}
                   = track.time.result.round(1) if track.time
-              %td.text-muted
-                .comment-cell= track.comment
               %td.text-info.text-right
                 = l(track.recorded_at, 
                     format: '%-d %b %Y', 
                     locale: params[:locale])
               %td= track_icons(track)
+  .text-center
+    .pagination-list
+      = will_paginate @profile.tracks, renderer: BootstrapPagination::Rails
