--- a/app/assets/stylesheets/_tracks.scss
+++ b/app/assets/stylesheets/_tracks.scss
@@ -52,22 +52,13 @@
     font-size: x-large;
 }
 
-.d-term {
-    width: 200px;
-}
-
            
 .dropdown-container {
     margin-top:15px;
 }
 
-.glyphicon {
-    margin-left:1px;
-    margin-top:2px;
-}
-
 #content-row {
-    height: 60px;
+  height: 60px;
 }
 
 #btn-range-edit {
@@ -149,7 +140,7 @@
     min-width: 85px;
 }
 
-#tracks-table .track-row {
+a.track-row {
   color: rgb(51, 51, 51);
   text-decoration: none;
 }
