--- a/app/views/profiles/tracks/index.html.haml
+++ b/app/views/profiles/tracks/index.html.haml
@@ -2,51 +2,20 @@
   = render 'profiles/header', profile: @profile
 
   .content-block
-    %table#user-tracks-table.table.table-hover
-      %thead
-        %tr
-          %th= t('activerecord.attributes.track.id')
-          %th= t('activerecord.attributes.track.suit')
-          %th= t('activerecord.attributes.track.place')
-          %th= t('activerecord.attributes.track.comment')
-          %th.text-right= t('disciplines.distance')
-          %th.text-right= t('disciplines.speed')
-          %th.text-right= t('disciplines.time')
-          %th.text-right= t('activerecord.attributes.track.recorded_at')
-          %th
-      %tbody
-        - @profile.tracks_by_month.each do |group, tracks|
-          %tr.bg-warning.text-danger.no-hover
-            %td{colspan: 9}
-              = l(group,
-                 format: '%B %Y', 
-                 locale: params[:locale])
-          - tracks.each do |track|
-            %tr.clickableRow{:data => {:url => track_path(:id => track.id)}}
-              %td.text-info= track.id
-              %td
-                %span.text-info
-                  - if track.suit
-                    = suit_presentation(track.suit)
-                  - else 
-                    = track.missing_suit_name
-              %td.text-info= track_place(track)
-              %td.text-muted
-                .comment-cell= track.comment
-              %td.text-right
-                %span.text-info{data: {toggle: 'tooltip'}, title: range_title(track.distance)}
-                  = track.distance.result.to_i if track.distance
-              %td.text-right
-                %span.text-info{data: {toggle: 'tooltip'}, title: range_title(track.speed)}
-                  = track.speed.result.to_i if track.speed
-              %td.text-right
-                %span.text-info{data: {toggle: 'tooltip'}, title: range_title(track.time)}
-                  = track.time.result.round(1) if track.time
-              %td.text-info.text-right
-                = l(track.recorded_at, 
-                    format: '%-d %b %Y', 
-                    locale: params[:locale])
-              %td= track_icons(track)
+    #profile-tracks-table.table.table-hover
+      .thead
+        .tr
+          .th= t('activerecord.attributes.track.id')
+          .th= t('activerecord.attributes.track.suit')
+          .th= t('activerecord.attributes.track.place')
+          .th= t('activerecord.attributes.track.comment')
+          .th.text-right= t('disciplines.distance')
+          .th.text-right= t('disciplines.speed')
+          .th.text-right= t('disciplines.time')
+          .th.text-right= t('activerecord.attributes.track.recorded_at')
+          .th
+      .tbody
+        = render partial: 'tracks/track', collection: @profile.tracks, locals: { except_columns: [:profile] }
   .text-center
     .pagination-list
       = will_paginate @profile.tracks, renderer: BootstrapPagination::Rails
