--- a/app/views/manage/dashboards/show.html.haml
+++ b/app/views/manage/dashboards/show.html.haml
@@ -109,7 +109,6 @@
 
     .col-sm-4
       %h2= 'Пользователи'
-      %p
-        = link_to 'Профили', profiles_path
-      %p
-        = link_to 'Пользователи', users_path
+      %p= link_to 'Профили', profiles_path
+      %p= link_to 'Пользователи', users_path
+      %p= link_to 'Бэйджи', badges_path
