Competition headers translation

--- a/app/views/static_pages/_online_competitions_section.html.haml
+++ b/app/views/static_pages/_online_competitions_section.html.haml
@@ -8,7 +8,7 @@
         %hr
         .row
           .col-sm-12.text-center
-            %h2.light-header= {'base' => 'BASE Challenge', 'skydive' => 'Skydive Challenge'}[activity]
+            %h2.light-header= t(".competitions_header.#{activity}")
         .leaderboard-stack
           - competitions.each do |competition|
             .leaderboard-stack__panel
