--- a/app/views/tracks/_header.html.haml
+++ b/app/views/tracks/_header.html.haml
@@ -43,7 +43,7 @@
         = link_to track_video_path(track), class: ['btn-flat btn-tab', ('active' if controller_path == 'tracks/videos')] do
           %i.fa.fa-play-circle-o
           = 'Video'
-      - elsif can? :edit, track
+      - elsif policy(track).edit?
         = link_to new_track_video_path(track), class: ['btn-flat btn-tab', ('active' if controller_path == 'tracks/videos')] do
           %i.fa.fa-play-circle-o
           = 'Video'
@@ -73,6 +73,6 @@
                  class: 'btn-flat btn-tab',
                  rel: 'nofollow'
 
-        - if user_signed_in? && (current_user == track.user || (can? :update, :tracks))
+        - if policy(track).edit?
           %a.btn-flat.btn-tab{href: edit_track_path(track)}
             %i.fa.fa-pencil
