--- a/app/views/organizers/create.js.erb
+++ b/app/views/organizers/create.js.erb
@@ -1,2 +1,2 @@
-$('#judges-list').append("<%= j render(@organizer) %>");
+$('.organizers__list').append("<%= j render(@organizer) %>");
 $('#modal').modal('hide');
