--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -136,18 +136,7 @@
                         remote: true
 
     .row
-      .col-md-12
-        %h4= t('.judges') + ':'
-        %ol#judges-list
-          %li.organizer
-            %span
-              = @event.responsible.name
-          - @event.organizers.each do |organizer|
-            = render 'organizers/organizer', organizer: organizer
-        - if can_manage && !@event.finished?
-          = link_to new_event_organizer_path(@event), remote: true, class: 'add-organizer button button--minimal' do
-            %i.fa.fa-plus
-            = t('.add_judge')
+      .col-md-12= render 'organizers/list', organizable: @event
 
     .row.top-buffer
       .col-md-12
