Added accounts index and show, migrate responsibles from profiles to users, make tests pass

--- a/app/assets/stylesheets/common/_tables.scss
+++ b/app/assets/stylesheets/common/_tables.scss
@@ -20,6 +20,10 @@ $table-border-width: 1px;
 .tbody { display: table-row-group }
 
 .tr { display: table-row; }
+a.tr {
+  color: rgb(51, 51, 51);
+  text-decoration: none;
+}
 
 .td {
   vertical-align: top;
