--- a/app/assets/stylesheets/_index_search.scss
+++ b/app/assets/stylesheets/_index_search.scss
@@ -1,9 +1,11 @@
-.profiles__search-container {
+.index-search__container {
+  padding-top: 5px;
+  padding-bottom: 15px;
   display: table;
   width: 100%;
 }
 
-.profiles__search-icon {
+.index-search__icon {
   display: table-cell;
   background-color: #f7f7f9;
   color: #999;
@@ -11,10 +13,10 @@
   height: 34px;
   text-align: center;
   vertical-align: middle;
-  border-radius: 4px;
+  border-radius: 4px 0px 0px 4px;
 }
 
-.profiles__search {
+.index-search__input {
   display: table-cell;
   background-color: #f7f7f9;
   color: #777;
@@ -23,6 +25,6 @@
   padding-left: 5px;
   padding-right: 5px;
   border: none;
-  border-radius: 4px;
+  border-radius: 0px 4px 4px 0px;
   outline: none;
 }
