--- a/app/views/tracks/_track.html.haml
+++ b/app/views/tracks/_track.html.haml
@@ -1,6 +1,6 @@
 - except_columns ||= []
 
-= link_to track_path(id: track.id), class: 'tr track-row' do
+= link_to track_path(id: track.id), class: 'tr' do
   %span.td= track.id
   - unless except_columns.include? :profile
     %span.td= track_pilot(track)
