--- a/app/views/manage/accounts/index.js.erb
+++ b/app/views/manage/accounts/index.js.erb
@@ -1,3 +1,7 @@
 document
   .querySelector('.accounts__table > .tbody')
   .innerHTML = '<%= j render partial: 'manage/accounts/account', collection: @accounts, as: :account %>';
+
+document
+  .querySelector('.accounts__pagination')
+  .innerHTML = '<%= j will_paginate(@accounts, renderer: BootstrapPagination::Rails) %>';
