--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -7,7 +7,8 @@
     .index-search__container
       %span.index-search__icon
         %i.fa.fa-search
-      %input.index-search__input{name: 'search', data: {remote: true, url: profiles_path}, placeholder: 'Type to search'}
+      %input.index-search__input{name: 'search', data: {remote: true, url: profiles_path}, placeholder: 'Type to search', value: params[:search]}
+
     %table.table.profiles__table
       %thead
         %th
@@ -19,6 +20,9 @@
         %th
       %tbody
         = render @profiles
+
+  .profiles__pagination.text-center.top-buffer
+    = will_paginate(@profiles, renderer: BootstrapPagination::Rails)
 
 - content_for :page_js do
   :javascript
