--- a/app/views/profiles/index.js.erb
+++ b/app/views/profiles/index.js.erb
@@ -1,1 +1,3 @@
 document.querySelector('.profiles__table > tbody').innerHTML = '<%= j render @profiles %>';
+
+document.querySelector('.profiles__pagination').innerHTML = '<%= j will_paginate(@profiles, renderer: BootstrapPagination::Rails) %>';
