--- a/app/views/tracks/videos/show.html.haml
+++ b/app/views/tracks/videos/show.html.haml
@@ -5,7 +5,7 @@
     = render partial: 'tracks/header', locals: {track: @track_data.track}
 
     .content-block.content-block--bordered
-      - if can? :update, @track_data.track
+      - if policy(@track_data.track).edit?
         .card-action
           .position-right
             = link_to edit_track_video_path(@track_data.track), class: 'btn-flat same-padding' do
