--- a/app/views/virtual_competitions/show.html+mobile.haml
+++ b/app/views/virtual_competitions/show.html+mobile.haml
@@ -1,7 +1,7 @@
 - provide :title, competition_title(@competition)
 
 .online-competition
-  - if can? :update, @competition
+  - if policy(@competition).edit?
     = link_to edit_virtual_competition_path(@competition), class: 'btn-flat' do
       %i.fa.fa-pencil
       = t('general.edit')
@@ -68,7 +68,7 @@
         %h4= t('events.show.event_sponsors') + ':'
     .row#sponsors
       = render @competition.sponsors
-    - if can? :edit, @competition
+    - if policy(@competition).edit?
       = link_to new_virtual_competition_sponsor_path(virtual_competition_id: @competition.id), remote: true, class: 'add-sponsor' do
         %i.fa.fa-plus
         = t('.add_sponsor')
