--- a/app/views/weather_data/_weather_datum.html.haml
+++ b/app/views/weather_data/_weather_datum.html.haml
@@ -8,13 +8,13 @@
   .td.text-right= weather_datum.wind_speed.convert_to(@view_units[:wind_speed]).round(1) if weather_datum.wind_speed
   .td.text-right= weather_datum.wind_direction.truncate
   .td
-    - if can?(:update, weather_datum.weather_datumable) && editable == 't'
+    - if policy(weather_datum.weather_datumable).update? && editable == 't'
       = link_to [:edit, weather_datum.weather_datumable, weather_datum], 
                 remote: true, 
                 'data-params' => {altitude_unit: @view_units[:altitude], wind_speed_unit: @view_units[:wind_speed]}.to_param,
                 class: 'btn-link' do
         %i.fa.fa-pencil.text-muted
-    - if can?(:update, weather_datum.weather_datumable) && editable == 't'
+
       = button_to [weather_datum.weather_datumable, weather_datum], 
                   method: :delete, 
                   remote: true, 
