--- a/app/views/tournaments/_header.html.haml
+++ b/app/views/tournaments/_header.html.haml
@@ -18,7 +18,7 @@
     - if @tournament.with_qualification?
       = link_to tournament_qualification_path(@tournament), class: ['btn-flat btn-tab', ('active' if controller_path == 'tournaments/qualifications')] do
         Qualification
-    - if can? :edit, @tournament
+    - if policy(@tournament).edit?
       = link_to tournament_tournament_competitors_path(@tournament.id), class: ['btn-flat btn-tab', ('active' if controller_path == 'tournaments/tournament_competitors')] do
         Competitors
 
