--- a/app/views/virtual_competitions/index.html+mobile.haml
+++ b/app/views/virtual_competitions/index.html+mobile.haml
@@ -1,5 +1,5 @@
 .online-competitions-index
-  - if can? :create, VirtualCompetition
+  - if policy(:virtual_competition).create?
     %a.btn.btn-default.btn-info{href: new_virtual_competition_path}
       %i.fa.fa-plus
       = 'Онлайн соревнование'
