--- a/app/views/weather_data/_table.html.haml
+++ b/app/views/weather_data/_table.html.haml
@@ -15,5 +15,5 @@
 
   .tbody
     = render weather_data, editable: editable, except_columns: except_columns
-    - if can?(:update, @weather_datumable) && editable == 't'
+    - if policy(@weather_datumable).update? && editable == 't'
       = render 'form_row', except_columns: except_columns
